# GCMProject

./: how_to.ipynb  install.sh  probit_regression.ipynb  setup.cfg  setup_cython.py
src/GCMProject/: how_to.ipynb
src/GCMProject/state_evolution/algorithms/: state_evolution.py
src/GCMProject/state_evolution/auxiliary/: approximate_probit_integrals.py  cython_functions.pyx  ft_logistic_integrals.py  laplace_functions.py  logistic_data_logistic_integrals.py  logistic_integrals.py  utility.py
src/GCMProject/state_evolution/data_models/: base_data_model.py  custom.py
src/GCMProject/state_evolution/experiments/: experiments.py  learning_curve.py
src/GCMProject/state_evolution/models/: approximate_probit_regression.py  base_model.py  bayes_optimal.py  bayes_optimal_probit.py  bayes_optimal_probit_spectrum.py  finite_temperature_logistic_regression.py  finite_temperature_logistic_regression_spectrum.py  logistic_regression.py  logistic_regression_spectrum.py  probit_regression.py  ridge_regression.py
src/GCMProject/test/: test_finite_temperature.py
state_evolution/algorithms/: state_evolution.py
state_evolution/auxiliary/: logistic_integrals.py  probit_integrals.py  utility.py
state_evolution/experiments/: experiments.py  learning_curve.py
state_evolution/models/: bayes_optimal_probit.py  logistic_regression.py  probit_regression.py
test/: test_probit.py
