[metadata]
name = gaussian_covariate_model 
version = 0.0.1
author = Lucas Clarte
author_email = clarte.lucas@gmail.com
description = Modified version of GCMProject
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lclarte/GCMProject
project_urls =
    Bug Tracker = https://github.com/pypa/sampleproject/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
